--- a/src/lang/ja.json
+++ b/src/lang/ja.json
@@ -137,5 +137,7 @@
     "per page": "毎ページ",
     "results": "件",
     "to": "から",
-    "Showing": "表示中："
+    "Showing": "表示中：",
+    "Settings": "設定",
+    "Event": "イベント"
 }
